--- a/task4/task4.html
+++ b/task4/task4.html
@@ -35,7 +35,7 @@
             <input  class="password" type="password" placeholder="请输入密码">
         </div>
     </div>
-    <button class="footer">登<div class="space"></div>陆</button>
+    <button class="footer">登&emsp;陆</button>
    
     <div class="tips">
          <a class="tips-01" href="http://www.jnshu.com/home">忘记密码?</a>
