--- a/task6/task6.html
+++ b/task6/task6.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>护工列表页</title>
 
 
 
@@ -27,56 +27,57 @@
 </head>
 
 <body>
-  
+
   <div class="header">
     <iv class="box">
       <button class="button-left">找护主</button>
       <button class="button-right">找雇主</button>
     </iv>
-  
 
-  <div class="main1">
-    <div class="btn-group btn-group1" role="group">
-      <button type="button" class="btn button1 btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-        aria-expanded="false">
-        &emsp;所在地&emsp;&nbsp;
-        <span class="caret"></span>
-      </button>
-      <ul class="dropdown-menu">
-        <li><a href="#">武汉</a></li>
-        <li><a href="#">成都</a></li>
-      </ul>
-    </div>
 
-    <div class="btn-group btn-group2" role="group">
-      <button type="button" class="btn button2 btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-        aria-expanded="false">
-        &emsp;&emsp;食宿&emsp;&nbsp;
-        <span class="caret"></span>
-      </button>
-      <ul class="dropdown-menu">
-        <li><a href="#">包食宿</a></li>
-        <li><a href="#">不包食宿</a></li>
-      </ul>
-    </div>
+    <div class="main1">
+      <div class="btn-group btn-group1" role="group">
+        <button type="button" class="btn button1 btn-default dropdown-toggle" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
+          &emsp;所在地&emsp;&nbsp;
+          <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu">
+          <li><a href="#">武汉</a></li>
+          <li><a href="#">成都</a></li>
+        </ul>
+      </div>
 
-    <div class="btn-group btn-group3" role="group">
-      <button type="button" class="btn button3 btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-        aria-expanded="false">
-        &emsp;病人情况&nbsp;
-        <span class="caret"></span>
-      </button>
-      <ul class="dropdown-menu">
-        <li><a href="#">良好</a></li>
-        <li><a href="#">健康</a></li>
-      </ul>
+      <div class="btn-group btn-group2" role="group">
+        <button type="button" class="btn button2 btn-default dropdown-toggle" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
+          &emsp;&emsp;食宿&emsp;&nbsp;
+          <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu">
+          <li><a href="#">包食宿</a></li>
+          <li><a href="#">不包食宿</a></li>
+        </ul>
+      </div>
+
+      <div class="btn-group btn-group3" role="group">
+        <button type="button" class="btn button3 btn-default dropdown-toggle" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
+          &emsp;病人情况&nbsp;
+          <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu">
+          <li><a href="#">良好</a></li>
+          <li><a href="#">健康</a></li>
+        </ul>
+      </div>
     </div>
-  </div>
   </div>
 
 
 
   <div class="main01">
+    <div class="arrow"></div>
     <div class="background"></div>
     <div class="main01-row1-iteam">服务日期</div>
     <div class="main01-row2-date">2015-7-5至2015-7-12</div>
@@ -85,6 +86,7 @@
   </div>
 
   <div class="main02">
+    <div class="arrow"></div>
     <div class="background"></div>
     <div class="main02-row1-iteam">服务日期</div>
     <div class="main02-row2-date">2015-7-5至2015-7-12</div>
@@ -93,6 +95,7 @@
   </div>
 
   <div class="main03">
+    <div class="arrow"></div>
     <div class="background"></div>
     <div class="main03-row1-iteam">服务日期</div>
     <div class="main03-row2-date">2015-7-5至2015-7-12</div>
@@ -101,6 +104,7 @@
   </div>
 
   <div class="main04">
+    <div class="arrow"></div>
     <div class="background"></div>
     <div class="main04-row1-iteam">服务日期</div>
     <div class="main04-row2-date">2015-7-5至2015-7-12</div>
@@ -109,6 +113,7 @@
   </div>
 
   <div class="main05">
+    <div class="arrow"></div>
     <div class="background"></div>
     <div class="main05-row1-iteam">服务日期</div>
     <div class="main05-row2-date">2015-7-5至2015-7-12</div>
@@ -116,15 +121,19 @@
     <div class="main05-row3-position">北京.通州.果园</div>
   </div>
 
- 
 
-<div class="footer">
-  <div class="footer-left"> 
-    <img src="images/09.png"><p>首页</p></div>
-  <div class="footer-middle"><img src="images/11.png"></div>
-  <div class="footer-right">
-    <img src="images/10.png"><p>我的</p></div>
-</div>
+
+  <div class="footer">
+    <div class="footer-left">
+      <img src="images/09.png">
+      <p>首页</p>
+    </div>
+    <div class="footer-middle"><img src="images/11.png"></div>
+    <div class="footer-right">
+      <img src="images/10.png">
+      <p>我的</p>
+    </div>
+  </div>
 
 
 
