--- a/task6/task6.html
+++ b/task6/task6.html
@@ -14,7 +14,7 @@
     integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
   <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
 
-  <link rel="stylesheet" href="bootstrap\bootstrap-3.3.7-dist\css\bootstrap.css">
+  <link rel="stylesheet" href="bootstrap-3.3.7-dist\css\bootstrap.css">
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
