--- a/task3/task3.html
+++ b/task3/task3.html
@@ -18,10 +18,11 @@
         </div>
     </div>
     <div class="footer">
-
         <div class="footer-left">
             <div class="left1"><img src="images/task3_03.png"></div>
-            <div class="left2">2056572356033</div>
+            <div class="left2">
+                <p>22223222223</p>
+            </div>
         </div>
 
         <div class="footer-right">
